# inferno

./: .dockerignore  .gitmodules  Cargo.toml  Dockerfile.alpine-alsa  Dockerfile.alpine-i2pipe  Dockerfile.debian-alsa  Dockerfile.fedora-alsa  README.md
alsa_pcm_inferno/: Cargo.toml  README.md  asoundrc  restart_pw  start_pipewire_sink  start_pipewire_source  stop_pipewire_nodes
alsa_pcm_inferno/src/: lib.rs
devtools/: hexstream_to_array.py  i2pipe_detect_silence.sh  sinegen.sh
inferno2pipe/src/: main.rs
inferno_aoip/: Cargo.toml
inferno_aoip/src/: arc_server.rs  byte_utils.rs  channels_subscriber.rs  cmc_server.rs  common.rs  device_info.rs  device_server.rs  flows_control_server.rs  flows_rx.rs  flows_tx.rs  info_mcast_server.rs  lib.rs  mdns_client.rs  mdns_server.rs  media_clock.rs  net_utils.rs  peaks.rs  ring_buffer.rs  samples_collector.rs  settings.rs  state_storage.rs
inferno_aoip/src/device_server/: arc_server.rs  channels_subscriber.rs  cmc_server.rs  flows_control_server.rs  flows_rx.rs  flows_tx.rs  info_mcast_server.rs  mdns_server.rs  mod.rs  peaks.rs  samples_collector.rs  samples_utils.rs  saved_settings.rs  settings.rs  tx_multicasts.rs
inferno_aoip/src/protocol/: flows_control.rs  mcast.rs  proto_arc.rs  proto_cmc.rs  req_resp.rs
inferno_aoip/src/util/: bytes.rs  mod.rs  net.rs  os.rs  real_time_box_channel.rs  thread.rs
inferno_aoip/tests/: loopback_trx.rs
os_integration/: systemd_allow_clock.conf
test/dockerized_trx/: README.md  docker-compose.yml  inferno.env  run_test.sh
test/dockerized_trx/alpine_aplay_arecord/: Dockerfile  (+1 more)
(+13 files in other folders)
