[workspace]
resolver = "2"

members = [
    "inferno_aoip",
    "searchfire",
    "inferno2pipe",
    "alsa_pcm_inferno",
]

[workspace.metadata.cross.target.aarch64-unknown-linux-gnu]
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt-get update && apt-get --assume-yes install libasound-dev:$CROSS_DEB_ARCH"
]

